Converted and removed all jquery logic into plain vanilla javascript, as well as removed the instructions and corrected a spacing issue with the add a note button.

--- a/gomer.css
+++ b/gomer.css
@@ -126,20 +126,21 @@ footer {
 }
 
 .notes {
+  height: 50%;
   width: 100%;
   display: inherit;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 50%;
   background-color: #FFFFFF;
 }
 
 .notesList {
   list-style-type: none;
   padding: 0;
+  margin: 0;
   font-size: 1.2em;
-  height: 50%;
+  height: 55%;
   width: 90%;
   overflow: auto;
   text-align: center;
@@ -208,10 +209,6 @@ footer {
   left: -9999px;
 }
 
-.instructions {
-  font-size: 1.2em;
-}
-
 /* Media Queries for different screen sizes */
 
 @media only screen and (min-width : 1024px) {
@@ -241,10 +238,6 @@ footer {
 
   .notesList li {
     margin: 0;
-  }
-
-  .instructions {
-    font-size: 1.5em;
   }
 
 }
